change pricing card

--- a/index.html
+++ b/index.html
@@ -604,13 +604,13 @@
     
 
     <!-- Pricing Section -->
-    <section class="pricing-section" id="pricing">
+    <section class="pricing-section" id="pricing" >
         <div class="section">
-            <h2 class="section-title">دسترسی فوری به هنر قهرمانان دریافت کنید</h2>
-            <div class="pricing-card">
+            <h2 class="section-title">دسترسی به هنر قهرمانان دریافت کنید</h2>
+            <div class="pricing-card" style="scale: 0.25;">
                 <div class="pricing-content">
                     <p class="old-price">قیمت اصلی: ۲ میلیون تومان</p>
-                    <h3 class="current-price">۷۰۰ هزارتومان</h3>
+                    <h3 class="current-price" style="font-family: 'EstedadBlack';">۷۰۰ هزارتومان</h3>
                     <p class="price-subtitle">پرداخت یکبار - دسترسی مادام‌العمر</p>
 
                     <ul class="features-list">
@@ -623,9 +623,9 @@
                         <li>ضمانت بازگشت وجه ۳۰ روزه</li>
                     </ul>
 
-                    <a href="#" class="cta-button" onclick="handlePurchase()">دسترسی فوری دریافت کنید - ۷۰۰ هزارتومان</a>
+                    <a href="#" class="cta-button" onclick="handlePurchase()">دریافت هنر قهرمانان - ۷۰۰ هزارتومان</a>
                     <p style="color: #666; font-size: 0.95rem; margin-top: 1.5rem; opacity: 0; transform: translateY(20px);"
-                        class="next-price">قیمت بعدی: ۲ میلیون تومان</p>
+                        class="next-price">قیمت اصلی: ۲ میلیون تومان</p>
                 </div>
             </div>
         </div>
