before ahmadreza's suggestion

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <button class="dot" data-target="#home" aria-label="خانه">
             <span class="label">خانه</span>
         </button>
-        <button class="dot" data-target="#video" aria-label="معرفی">
+        <!-- <button class="dot" data-target="#video" aria-label="معرفی">
             <span class="label">معرفی</span>
-        </button>
+        </button> -->
         <button class="dot" data-target="#app" aria-label="اپلیکیشن">
             <span class="label">اپلیکیشن</span>
         </button>
@@ -115,7 +115,7 @@
     
 
     <!-- Video Introduction Section -->
-    <section class="video-section" id="video">
+    <!-- <section class="video-section" id="video">
         <div class="video-container">
             <h2 class="video-title">فیلم معرفی</h2>
             <p style="color: #b0b0b0; font-size: 1.2rem; margin-bottom: 2rem; opacity: 0; transform: translateY(30px);"
@@ -129,11 +129,10 @@
                         <div class="play-icon"></div>
                     </div>
                     <p style="color: #b0b0b0; font-size: 1.1rem;">برای تماشای ویدیو معرفی کلیک کنید</p>
-                    <!-- <p style="color: #666; font-size: 0.9rem; margin-top: 0.5rem;">مدت زمان: ۳:۴۲</p> -->
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Mobile App Showcase Section -->
     <section class="mobile-app-section" id="app">
@@ -609,8 +608,8 @@
             <h2 class="section-title">دسترسی به هنر قهرمانان دریافت کنید</h2>
             <div class="pricing-card" style="scale: 0.25;">
                 <div class="pricing-content">
-                    <p class="old-price">قیمت اصلی: ۲ میلیون تومان</p>
-                    <h3 class="current-price" style="font-family: 'EstedadBlack';">۷۰۰ هزارتومان</h3>
+                    <p class="old-price">قیمت اصلی: ۱۲ میلیون تومان</p>
+                    <h3 class="current-price" style="font-family: 'EstedadBlack';">۴میلیون و ۸۰۰ هزارتومان</h3>
                     <p class="price-subtitle">پرداخت یکبار - دسترسی مادام‌العمر</p>
 
                     <ul class="features-list">
@@ -623,9 +622,9 @@
                         <li>ضمانت بازگشت وجه ۳۰ روزه</li>
                     </ul>
 
-                    <a href="#" class="cta-button" onclick="handlePurchase()">دریافت هنر قهرمانان - ۷۰۰ هزارتومان</a>
+                    <a href="#" class="cta-button" onclick="handlePurchase()">دریافت هنر قهرمانان-۴,۸۰۰,۰۰۰ تومان</a>
                     <p style="color: #666; font-size: 0.95rem; margin-top: 1.5rem; opacity: 0; transform: translateY(20px);"
-                        class="next-price">قیمت اصلی: ۲ میلیون تومان</p>
+                        class="next-price">قیمت اصلی: ۱۲ میلیون تومان</p>
                 </div>
             </div>
         </div>
