--- a/index.html
+++ b/index.html
@@ -591,6 +591,13 @@
                 </div>
                 <button class="vt-nav vt-next" aria-label="بعدی">›</button>
             </div>
+            <div class="vt-thumbnails" style="display: flex; flex-direction: row; gap: 14px; margin: 20px auto; justify-content: center; align-items: center; max-width: 700px;">
+                <img src="./assets/images/slide-1.png" class="vt-thumb active" data-index="0" alt="ویدیو ۱" style="width: 84px; height: 48px; object-fit: cover; cursor: pointer; border-radius: 7px; border: 2px solid #00ff87;">
+                <img src="./assets/images/slide-2.png" class="vt-thumb" data-index="1" alt="ویدیو ۲" style="width: 84px; height: 48px; object-fit: cover; cursor: pointer; border-radius: 7px; border: 2px solid transparent;">
+                <img src="./assets/images/slide-3.jpg" class="vt-thumb" data-index="2" alt="ویدیو ۳" style="width: 84px; height: 48px; object-fit: cover; cursor: pointer; border-radius: 7px; border: 2px solid transparent;">
+                <img src="./assets/images/slide-3.jpg" class="vt-thumb" data-index="3" alt="ویدیو ۴" style="width: 84px; height: 48px; object-fit: cover; cursor: pointer; border-radius: 7px; border: 2px solid transparent;">
+                <img src="./assets/images/slide-3.jpg" class="vt-thumb" data-index="4" alt="ویدیو ۵" style="width: 84px; height: 48px; object-fit: cover; cursor: pointer; border-radius: 7px; border: 2px solid transparent;">
+            </div>
             <div class="vt-dots" style="margin-block: 50px;padding-bottom: 50px;" role="tablist" aria-label="انتخاب اسلاید">
                 <button class="vt-dot active" data-index="0" aria-label="اسلاید ۱"></button>
                 <button class="vt-dot" data-index="1" aria-label="اسلاید ۲"></button>
@@ -600,7 +607,7 @@
             </div>
         </div>
     </section>
-    
+    <!-- END Video Testimonials Carousel -->
 
     <!-- Pricing Section -->
     <section class="pricing-section" id="pricing" >
@@ -1224,6 +1231,7 @@
             const dots = Array.from(document.querySelectorAll('.vt-dot'));
             const prev = document.querySelector('.vt-prev');
             const next = document.querySelector('.vt-next');
+            const thumbs = Array.from(document.querySelectorAll('.vt-thumb'));
             if (!track || slides.length === 0) return;
 
             let index = 0;
@@ -1247,11 +1255,21 @@
                 });
                 // Update dots
                 dots.forEach((d, i) => d.classList.toggle('active', i === index));
+                // Update thumbs
+                if (thumbs.length) {
+                    thumbs.forEach((t, i) => t.classList.toggle('active', i === index));
+                }
             }
 
             prev?.addEventListener('click', () => updateActive(index - 1));
             next?.addEventListener('click', () => updateActive(index + 1));
             dots.forEach(d => d.addEventListener('click', () => updateActive(parseInt(d.dataset.index))));
+
+            // Thumbnail click triggers
+            thumbs.forEach(t => {
+                t.addEventListener('click', () => updateActive(parseInt(t.dataset.index)));
+                t.addEventListener('keydown', e => { if(e.key === 'Enter') updateActive(parseInt(t.dataset.index)); });
+            });
 
             // Pause on slide click toggle
             slides.forEach(slide => {
@@ -1261,7 +1279,7 @@
                 });
             });
 
-            // Auto-advance every 10s
+            // Auto-advance every 40s (optional, considered user-inactive)
             setInterval(() => updateActive(index + 1), 40000);
 
             // Start
