Delete(remove): remove fbx loadings

--- a/index.html
+++ b/index.html
@@ -1042,24 +1042,24 @@
         init3DScene();
 
         // Example: load an FBX file (replace with your own path)
-        for (let i = 0; i <= numberOfBalls; i++) {
-            loadFBX('assets/models/FootBall.fbx', {
-                scale: 0.005 + (Math.random() * 0.001), position: {
-                    x: (Math.random() - 0.5) * 20
-                    , y: (Math.random() - 0.5) * 20, z: (Math.random() - 0.5) * 10
-                }
-            });
-        }
+        // for (let i = 0; i <= numberOfBalls; i++) {
+        //     loadFBX('assets/models/FootBall.fbx', {
+        //         scale: 0.005 + (Math.random() * 0.001), position: {
+        //             x: (Math.random() - 0.5) * 20
+        //             , y: (Math.random() - 0.5) * 20, z: (Math.random() - 0.5) * 10
+        //         }
+        //     });
+        // }
 
 
-        for (let i = 0; i <= numberOfCones; i++) {
-            loadFBX('assets/models/cone.fbx', {
-                scale: 0.02 + (Math.random() * 0.01), position: {
-                    x: (Math.random() - 0.5) * 20
-                    , y: (Math.random() - 0.5) * 20, z: (Math.random() - 0.5) * 10
-                }
-            });
-        }
+        // for (let i = 0; i <= numberOfCones; i++) {
+        //     loadFBX('assets/models/cone.fbx', {
+        //         scale: 0.02 + (Math.random() * 0.01), position: {
+        //             x: (Math.random() - 0.5) * 20
+        //             , y: (Math.random() - 0.5) * 20, z: (Math.random() - 0.5) * 10
+        //         }
+        //     });
+        // }
 
 
         // Hero Animations
