change(hero): set hero contents center aligned and change and added textes .

--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
             <img class="slide slide-3" src="./assets/images/slide-3.jpg">
         </div>
 
-        <div class="hero-content" style="text-align: right;">
+        <div class="hero-content" style="text-align: center;">
+            <p class="hero-subtitle" style="font-family: 'TitrMedium';font-size: small;">پدرها و مادرهای کودکان ۷ سال تا ۱۵ سال ...</p>
+            <p class="hero-subtitle" style="font-family: 'TitrMedium';">چگونه به فرزندتان مهارت‌های فردی را آموزش بدهید که درهای فوتبال حرفه‌ای را به رویش باز کند</p>
             <h1 class="hero-title" style="font-family: 'TitrBold';">هنر قهرمانان</h1>
             <p class="hero-subtitle" style="font-family: 'TitrMedium';">سیستم آموزش حرفه‌ای فوتبال</p>
             <p class="hero-description" style="font-family: 'EstedadRegular';"">
