change(general): some positions corrected in mobile screens

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Space+Grotesk:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700;800&family=Orbitron:wght@400;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="index.css">
+    <link href="https://framerusercontent.com/images/WaE9y1q8u84RBhVkrUOim42h24I.png" rel="icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
@@ -162,7 +163,7 @@
         </div>
 
         <div class="hero-content" style="text-align: center;">
-            <p class="hero-subtitle" style="font-family: 'TitrMedium';font-size: small;">پدرها و مادرهای کودکان ۷ سال تا ۱۵ سال ...</p>
+            <p class="hero-subtitle" style="font-family: 'TitrMedium';margin-bottom: 0px;">پدرها و مادرهای کودکان ۷ سال تا ۱۵ سال ...</p>
             <p class="hero-subtitle" style="font-family: 'TitrMedium';">چگونه به فرزندتان مهارت‌های فردی را آموزش بدهید که درهای فوتبال حرفه‌ای را به رویش باز کند</p>
             <h1 class="hero-title" style="font-family: 'TitrBold';">هنر قهرمانان</h1>
             <p class="hero-subtitle" style="font-family: 'TitrMedium';">سیستم آموزش حرفه‌ای فوتبال</p>
