feat(audio-toggle): add mobile audio toggle button for video playback and adjust video mute behavior

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
     </section>
 
     <section class="video-grid-section" id="customer-video-testimonials" aria-label="ویدیوهای مشتریان">
-        <h2 class="section-title">  ویدیوها</h2>
+         <h2 class="section-title">  ویدیوها</h2>
   
         <div class="video-grid" id="video-grid-container">
           <!-- Video cards will be dynamically loaded from JSON -->
@@ -703,6 +703,8 @@
         const section = document.getElementById('customer-video-testimonials');
         const videoGrid = document.getElementById('video-grid-container');
         if (!section || !videoGrid) return;
+        const isMobileViewport = window.matchMedia('(max-width: 768px)').matches;
+        let mobileAudioEnabled = false;
 
         // Load video data from JSON
         let videosData = [];
@@ -724,6 +726,19 @@
             <video class="grid-video" playsinline preload="none" poster="${videoData.thumbnail}" muted>
               <source data-src="${videoData.videoUrl}" type="video/mp4">
             </video>
+            <button class="mobile-audio-toggle" type="button" aria-pressed="false" aria-label="فعال کردن صدا">
+              <svg class="audio-icon audio-icon-on" viewBox="0 0 24 24" aria-hidden="true">
+                <path d="M3 10v4h4l5 4V6l-5 4H3z"></path>
+                <path d="M16.5 12c0-1.77-1.02-3.29-2.5-4.03v8.06c1.48-.74 2.5-2.26 2.5-4.03z"></path>
+                <path d="M14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"></path>
+              </svg>
+              <svg class="audio-icon audio-icon-off" viewBox="0 0 24 24" aria-hidden="true">
+                <path d="M16.5 12c0-1.77-1.02-3.29-2.5-4.03v2.21l2.45 2.45c.03-.2.05-.41.05-.63z"></path>
+                <path d="M19 12c0 1.9-.68 3.63-1.82 4.98l1.42 1.42C20.03 16.56 21 14.39 21 12c0-4.28-2.99-7.86-7-8.77v2.06c2.89.86 5 3.54 5 6.71z"></path>
+                <path d="M3 10v4h4l5 4V6l-5 4H3z"></path>
+                <path d="M4.27 3L3 4.27 7.73 9H3v6h4l5 4v-6.73l4.73 4.73 1.27-1.27L4.27 3z"></path>
+              </svg>
+            </button>
             <button class="play-toggle" type="button" aria-label="Play">
               <svg class="icon icon-play" viewBox="0 0 24 24" aria-hidden="true"><polygon points="8,5 19,12 8,19"></polygon></svg>
               <svg class="icon icon-pause" viewBox="0 0 24 24" aria-hidden="true"><rect x="6" y="5" width="5" height="14"></rect><rect x="13" y="5" width="5" height="14"></rect></svg>
@@ -747,6 +762,7 @@
         // Initialize video functionality after cards are created
         const cards = Array.from(section.querySelectorAll('.video-card'));
         const videos = Array.from(section.querySelectorAll('video'));
+        const audioToggleButtons = Array.from(section.querySelectorAll('.mobile-audio-toggle'));
 
         // Helper: load src from data-src once
         function ensureLoaded(video) {
@@ -763,11 +779,40 @@
           }
         }
 
+        function syncVideoMuteState() {
+          videos.forEach(v => {
+            if (!v) return;
+            v.muted = isMobileViewport ? !mobileAudioEnabled : false;
+          });
+        }
+
         videos.forEach(v => {
-          v.muted = false;
           v.loop = true;
           v.playsInline = true;
           v.preload = 'none';
+        });
+        syncVideoMuteState();
+
+        function updateAudioToggleButtons() {
+          audioToggleButtons.forEach(btn => {
+            if (!isMobileViewport) {
+              btn.style.display = 'none';
+            } else {
+              btn.style.display = 'inline-flex';
+              btn.setAttribute('aria-pressed', String(mobileAudioEnabled));
+              btn.setAttribute('aria-label', mobileAudioEnabled ? 'بی‌صدا کردن ویدیوها' : 'فعال کردن صدا');
+            }
+          });
+        }
+        updateAudioToggleButtons();
+
+        audioToggleButtons.forEach(btn => {
+          btn.addEventListener('click', (event) => {
+            event.stopPropagation();
+            mobileAudioEnabled = !mobileAudioEnabled;
+            updateAudioToggleButtons();
+            syncVideoMuteState();
+          });
         });
 
         function pauseOthers(active) {
@@ -811,9 +856,18 @@
         const cardObserver = new IntersectionObserver(entries => {
           entries.forEach(entry => {
             const v = entry.target.querySelector('video');
-            if (entry.isIntersecting) ensureLoaded(v);
+            if (!v) return;
+            if (entry.isIntersecting) {
+              ensureLoaded(v);
+              if (isMobileViewport) {
+                pauseOthers(v);
+                v.play().catch(() => {});
+              }
+            } else if (isMobileViewport) {
+              v.pause();
+            }
           });
-        }, { threshold: 0.3 });
+        }, { threshold: isMobileViewport ? 0.6 : 0.3 });
         cards.forEach(card => cardObserver.observe(card));
 
         // Pause all when section not visible
@@ -1876,7 +1930,7 @@
                             `;
                             alertDiv.innerHTML = `
                                 <h3 style="margin-bottom: 1rem; color: #00ff87;">در حال انتقال به صفحه پرداخت</h3>
-                                <p style="margin-bottom: 1.5rem;">شما در حال خرید هنر قهرمانان به قیمت ۷۰۰ هزارتومان هستید</p>
+                                <p style="margin-bottom: 1.5rem;">شما در حال خرید هنر قهرمانان به قیمت ۴ میلیون و ۸۰۰ هزارتومان هستید</p>
                                 <div style="width: 40px; height: 40px; border: 3px solid #00ff87; border-top: 3px solid transparent; border-radius: 50%; margin: 0 auto; animation: spin 1s linear infinite;"></div>
                             `;
 
