refactor(index): comment out unused Three.js script and initialization function for clarify

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://framerusercontent.com/images/WaE9y1q8u84RBhVkrUOim42h24I.png" rel="icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script> -->
     <script src="https://unpkg.com/three@0.128.0/examples/js/loaders/FBXLoader.js"></script>
     <script src="https://unpkg.com/fflate@0.8.2"></script>
     <script src="https://cdn.jsdelivr.net/npm/fflate@0.8.2/umd/index.js"></script>
@@ -1095,7 +1095,7 @@
         }
 
         // Initialize 3D scene
-        init3DScene();
+        //init3DScene();
 
         // Example: load an FBX file (replace with your own path)
         // for (let i = 0; i <= numberOfBalls; i++) {
